Fix bug with WebPartTitle infoLabel rendering behind content

--- a/SharePointFramework/shared-library/src/components/ProjectTimeline/Timeline/Timeline.module.scss
+++ b/SharePointFramework/shared-library/src/components/ProjectTimeline/Timeline/Timeline.module.scss
@@ -46,7 +46,6 @@
 div[class="rct-header-root"] {
   position: sticky;
   top: 0;
-  z-index: 100;
   background: #f4f4f4 !important;
 }
 
@@ -54,6 +53,10 @@ div[class="rct-sidebar"] {
   width: fit-content !important;
   max-width: 320px !important;
   min-width: 0px !important;
+}
+
+div[class="rct-scroll"] {
+  z-index: 1 !important;
 }
 
 div[class="rct-dateHeader-primary"] {
