--- a/SharePointFramework/shared-library/src/components/WebPartTitle/WebPartTitle.module.scss
+++ b/SharePointFramework/shared-library/src/components/WebPartTitle/WebPartTitle.module.scss
@@ -21,6 +21,10 @@
       cursor: pointer;
     }
   }
+
+  .infoLabel > span > div {
+    z-index: 9;
+  }
 }
 
 div > .infoLabelContent {
